fix story on mobile - sizing now appropriately changes based on the slide shown

--- a/larry/i3-site/public/css/app.css
+++ b/larry/i3-site/public/css/app.css
@@ -174,6 +174,7 @@ p {
     text-align: center;
     display: block;
     width: 100%;
+    margin-top: 16px;
 }
 @media (min-width: 1520px) {
     .page-h1 {
@@ -182,6 +183,7 @@ p {
         top: 50%;
         transform: rotate(-90deg) translateY(55%) translateX(-50%);
         transform-origin: left center;
+        margin-top: 0px;
     }
 }
 
